--- a/SourceQL/assets/page.html
+++ b/SourceQL/assets/page.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>*{margin:0;padding:0;font-size:95%%;background:#ffffff}body{background:#ffffff;background-image: url(\"data:image/jpg;base64,%@\");}%@</style>"
-        "</head>"
-    "<body>"
-        "<div class=\"page-header\">"
-            "<h1>swift</h1>"
-            "</div>"
-        "<pre><code class=\"language-javascript\">%@</code></pre>"
-        "<script>%@</script>"
-        "</body>"
-    "</html>"
+      <style>
+          * {
+              margin:0;
+              padding:0;
+              font-size:95%%;
+
+          }
+
+          body {
+              background-image: url("data:image/jpg;base64,%@");
+
+          }
+
+          %@
+      </style>
+    </head>
+    <body>
+      <div class="page-header">
+        <h1>swift</h1>
+      </div>
+      <p></p>
+      <pre>
+        <code class="language-js">
+        %@
+        </code>
+      </pre>
+      <script>%@</script>
+    </body>
+</html>
