--- a/SourceQL/assets/page.html
+++ b/SourceQL/assets/page.html
@@ -42,6 +42,13 @@
             background-repeat: no-repeat;
             background-size: cover;
           }
+
+          #rcorners2 {
+            border-radius: 25px;
+            border: 2px solid #73AD21;
+            margin: 20px;
+          }
+
           %@
       </style>
     </head>
@@ -51,11 +58,13 @@
         <h1>%@</h1>
       </div>
       <p></p>
-      <pre>
-        <code class="language-js">
-        %@
-        </code>
-      </pre>
+      <div id="rcorners2">
+        <pre>
+          <code class="language-js">
+          %@
+          </code>
+        </pre>
+      </div>
       <script>%@</script>
     </body>
 </html>
