fixed leading space issue

--- a/SwiftPreview/assets/page.html
+++ b/SwiftPreview/assets/page.html
@@ -59,11 +59,7 @@
       </div>
       <p></p>
       <div id="rcorners2">
-        <pre>
-          <code class="language-js">
-          %@
-          </code>
-        </pre>
+        <pre><code class="language-js">%@</code></pre>
       </div>
       <script>%@</script>
     </body>
