--- a/SwiftPreview/assets/page.html
+++ b/SwiftPreview/assets/page.html
@@ -2,51 +2,59 @@
 <html>
     <head>
       <style>
-          * {
-            margin:0;
-            padding:0;
-            font-size:95%%;
-          }
+        * {
+          margin:0;
+          padding:0;
+          font-size: 14px;
+        }
 
-          body, html {
-            height: 100%;
-            margin: 0;
-          }
+        body, html {
+          height: 100%;
+          margin: 0;
+        }
 
-          .page-header {
-            padding-bottom:20px;
-            margin:18px 0;
-            border-bottom:5px;
-            solid #eee;
-            background-color:#f64222;
-            padding:10px 20px 10px;
-            margin:0px 0px 20px;
-            font-family:Arial Black;
-            color:White;
-            font-size: 15px;
-          }
+        .page-header {
+          background: white;
+          padding: 50px 0;
+          font-family: "-apple-system", helvetica, sans-serif;
+          letter-spacing: 0.2px;
+          position: relative;
+        }
 
-          .page-header h1 {
-            line-height:1.5
-          }
+        .page-header h1 {
+          font-family: inherit;
+          font-size: 20px;
+          font-weight: bold;
+          display: inline-block;
+          background: -webkit-linear-gradient(top left, #fe3627, #fcae3f );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          padding: 0 50px;
+        }
+
+        p {
+          height: 2px;
+          width: 100%;
+          background: -webkit-linear-gradient(top left, #fe3627, #fcae3f );
+        }
+
+        #rcorners2 {
+          margin-bottom: 150px;
+        }
+
+        #rcorners2 pre {
+          padding: 0 50px;
+        }
 
           body {
             /* The image used */
             background-image: url("data:image/jpg;base64,%@");
-
-            /* Full height */
-            height: 100%;
+            background: transparent;
 
             /* Center and scale the image nicely */
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-          }
-
-          #rcorners2 {
-            border-radius: 25px;
-            border: 2px solid #73AD21;
-            margin: 20px;
           }
 
           %@
