--- a/SwiftPreview/assets/page.html
+++ b/SwiftPreview/assets/page.html
@@ -5,7 +5,7 @@
         * {
           margin:0;
           padding:0;
-          font-size: 14px;
+          font-size: 12px;
         }
 
         body, html {
@@ -43,7 +43,7 @@
         }
 
         #rcorners2 pre {
-          padding: 0 50px;
+          padding: 50px 50px 0;
         }
 
           body {
