line numbers in preview

--- a/SwiftPreview/assets/page.html
+++ b/SwiftPreview/assets/page.html
@@ -50,6 +50,11 @@
           }
 
           %@
+          
+          pre[class*="language-"] { 
+              background-color:#ffffff;
+          }
+      
       </style>
     </head>
     <body>
@@ -59,7 +64,7 @@
       </div>
       <p></p>
       <div id="rcorners2">
-        <pre><code class="language-js">%@</code></pre>
+        <pre class="line-numbers"><code class="language-swift">%@</code></pre>
       </div>
       <script>%@</script>
     </body>
