minor css fixes

--- a/SwiftPreview/assets/page.html
+++ b/SwiftPreview/assets/page.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <style>
+
         * {
           margin:0;
           padding:0;
@@ -46,16 +47,16 @@
           padding: 50px 50px 0;
         }
 
-          body {
-            /* The image used */
-            background-image: url("data:image/jpg;base64,%@");
-            background: transparent;
+        body {
+          /* The image used */
+          background-image: url("data:image/jpg;base64,%@");
+          background: transparent;
 
-            /* Center and scale the image nicely */
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-          }
+          /* Center and scale the image nicely */
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
 
           %@
       </style>
@@ -67,12 +68,11 @@
       </div>
       <p></p>
       <div id="rcorners2">
-        <pre>
-          <code class="language-js">
-          %@
-          </code>
+        <pre class="line-numbers">
+          <code class="language-swift">%@</code>
         </pre>
       </div>
+
       <script>%@</script>
     </body>
 </html>
